# OSIRIS-OS

./: .env.example  .gitlab-ci.yml  ACHIEVEMENT_METRICS.md  ACHIEVEMENT_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Docker.md  Dockerfile  Dockerfile.multiplatform  QUICK_START.md  README.md  REVOLUTIONARY_ACHIEVEMENT.md  SECURITY.md  TODO.md  composer.json  docker-compose.advanced.yml  docker-compose.yml  electron-builder.json  magicai.sql  package-lock.json  package.json  pyproject.toml  vite.config.mjs
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci-custom.yml  ci.yml  deploy-on-push.yml  platform-builds.yml  publish.yml  quantum-ci-cd-enhanced.yml  quantum-ci-cd.yml
Extensions/: slug-list.txt
ai-driven-core/: ai-orchestrator.js
app/Enums/: AITokenType.php  Introduction.php
app/Helpers/: helpers.php
benchmarks/: benchmark_didn.py
bridges/: README.md
builds/: README.md
config/: app.php  ton.php  websockets.php
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  RELEASE_PROCESS.md  ROADMAP.md
gen-ai-engine/: gen-ai-core.js
git-systems/: README.md
gitflic/: .gitflic-ci.yml  README.md
github/: README.md  webhooks.md
gitlab/: README.md
gitverse/: .gitverse-ci.yml  README.md
horizontals/: README.md
international-git-systems/: README.md
press/: manifesto.md  press-release.md
routes/: api.php  ton.php  webhooks.php
sourcecraft/: .sourcecraft-ci.yml  README.md
tests/: test_ai_nodes.py  test_didn.py  test_qmp.py
verticals/: README.md
web-integration/: webx-platform.js
(+155 files in other folders)
